# Screen-speed

./: .gitignore
eez-studio/speed_monitor/: speed_monitor.eez-project  speed_monitor.eez-project-ui-state
esp/Firmware/: CMakeLists.txt  COPILOT_ANTICIPATION_ROADMAP.md  README.md  WIFI_OTA_ROADMAP.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp/Firmware/components/SensorLib/src/: SensorLib.h
esp/Firmware/components/map_sync/: CMakeLists.txt  Kconfig  map_sync.c  map_sync.h
esp/Firmware/components/net_link/: CMakeLists.txt  net_link.c  net_link.h
esp/Firmware/components/sd_card/: CMakeLists.txt  sd_manager.c  sd_manager.h  sd_test_io.c
esp/Firmware/components/tile_reader/: CMakeLists.txt  tile_config.h  tile_reader.c  tile_reader.h
esp/Firmware/components/wifi_portal/: CMakeLists.txt  wifi_portal.c  wifi_portal.h
esp/Firmware/main/: CMakeLists.txt  Kconfig.projbuild  buttons.c  buttons.h  diag_log.c  diag_log.h  dynamic.c  dynamic.h  idf_component.yml  mykeego_logo.c  mykeego_logo.h  nmea_parser.c  offline_maps.c  pmu_monitor.c  pmu_monitor.h  ruptela_binary.c  ruptela_binary.h  splash.c  splash.h  vars.c  vehicle_io.c  vehicle_io.h  waveshare_amoled_lcd_port.cpp  waveshare_amoled_lcd_port.h
esp/Firmware/main/ui/: .eez-project-build  fonts.h  screens.c  screens.h  ui.c  ui.h  ui_font_street_name_latin.c  ui_font_tjf_hardhatt_bold.c  ui_font_tjf_hardhatt_regular.c  vars.h
python/: extract_tiles.py  launcher.py  make_catalog.py  map_test_server.py  print_tile_info.py  requirements.txt  zones.json
python/pbf_files/: acquire_data.txt
